# NanoparticleSimulator

./: .gitignore  .hgignore  CMakeLists.txt  README.md
cmake/Modules/: FindC99Flag.cmake  FindQWT.cmake
include/: arraycontractions.h  constants.h  experimental_dielectrics.h  mainwindow.hpp  material_index.h  nanoparticle.hpp  solvers.h
include/npsolve/: constants.h  drude_parameters.h  experimental_dielectrics.h  mie_helpers.h  npsolve.h  solvers.h  standard_color_matching.h  wavelengths.h
src/: Constants.f90  arraycontractions.h  main.c  main.f90  mainwindow.cpp  mie.c  mie_helpers.c  nanoparticle.cpp  npsolve.c  quasi.c  quasi.f90
src/npsolve/: arraycontractions.c  containers.c  drude_parameters.c  experimental_dielectrics.c  material_index.c  mie.c  mie_helpers.c  npsolve.c  quasi.c  standard_color_matching.c  wavelengths.c
test/: Makefile  main.c  mie.f90  quasi.f90
